<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="by.darya_zdzitavetskaya.bstu_canteen.presentation.main.profile.ProfileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/base_spacing">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="@dimen/base_spacing"
            android:text="@string/profile_your_email_subtitle"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/base_spacing"
            android:text="@{viewModel.userEmail}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            app:layout_constraintTop_toBottomOf="@id/tvHint"
            tools:text="testemail@gmail.com" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvChangePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/biggest_spacing"
            android:drawableEnd="@drawable/ic_more"
            android:onClick="@{() -> viewModel.goToPass()}"
            android:paddingTop="@dimen/small_spacing"
            android:paddingBottom="@dimen/small_spacing"
            android:text="@string/profile_change_password_btn_label"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@id/tvChangePassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvScanQrCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_more"
            android:onClick="@{() -> viewModel.scanQrCode()}"
            android:paddingTop="@dimen/small_spacing"
            android:paddingBottom="@dimen/small_spacing"
            android:text="@string/profile_scan_qr_code_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@id/tvPaymentMethod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvChangePassword"
            app:visibleOrGone="@{viewModel.isAdminObservable}" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tvScanQrCode" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPaymentMethod"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_more"
            android:onClick="@{() -> viewModel.payment()}"
            android:paddingTop="@dimen/small_spacing"
            android:paddingBottom="@dimen/small_spacing"
            android:text="@string/profile_add_payment_method_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/tvWriteToSupport"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvScanQrCode" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@id/tvPaymentMethod" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWriteToSupport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_more"
            android:paddingTop="@dimen/small_spacing"
            android:paddingBottom="@dimen/small_spacing"
            android:text="@string/profile_write_to_support_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@id/btnLogout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPaymentMethod"
            app:visibleOrGone="@{!viewModel.isAdminObservable}" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/biggest_spacing"
            android:onClick="@{() -> viewModel.logout()}"
            android:text="@string/profile_logout_btn_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWriteToSupport" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
