<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="by.darya_zdzitavetskaya.bstu_canteen.presentation.main.menu.edit_product.EditProductViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_with_back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_spacing"
            android:layout_marginTop="@dimen/smallest_spacing"
            app:cardCornerRadius="41dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPicture"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:foreground="@color/black_out"
                android:scaleType="centerCrop"
                app:imageUrl="@{viewModel.imageUrl}"
                app:isCircle="@{true}"
                tools:src="@drawable/splash_screen_background" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera" />

        </com.google.android.material.card.MaterialCardView>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_spacing"
            android:layout_marginTop="@dimen/big_spacing"
            android:text="@={viewModel.name}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvPicture"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:text="Fish" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_spacing"
            android:layout_marginTop="@dimen/smallest_spacing"
            android:text="@string/edit_product_info_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvPicture" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/smallest_spacing"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@id/tvInfo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_spacing"
            android:layout_marginTop="@dimen/big_spacing"
            android:text="@string/edit_product_description"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@+id/etDescription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_spacing"
            android:layout_marginTop="@dimen/smallest_spacing"
            android:layout_marginEnd="@dimen/base_spacing"
            android:inputType="textCapSentences|textMultiLine"
            android:text="@={viewModel.description}"
            android:textColor="@color/colorGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDescription"
            app:layout_constraintTop_toBottomOf="@id/view"
            tools:text="Description of product" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/smallest_spacing"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@id/etDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_spacing"
            android:layout_marginTop="@dimen/big_spacing"
            android:layout_marginEnd="@dimen/base_spacing"
            android:hint="@string/edit_product_price"
            app:layout_constraintEnd_toStartOf="@id/tilQuantity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1"
            app:suffixText="@string/edit_product_price_suffix">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890."
                android:inputType="number"
                android:singleLine="true"
                android:text="@={viewModel.price}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_spacing"
            android:layout_marginTop="@dimen/big_spacing"
            android:layout_marginEnd="@dimen/base_spacing"
            android:hint="@string/edit_product_quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tilPrice"
            app:layout_constraintTop_toBottomOf="@id/view1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:inputType="number"
                android:singleLine="true"
                android:text="@={viewModel.quantity}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginEnd="@dimen/base_spacing"
            android:enabled="@{viewModel.isFieldsValid}"
            android:onClick="@{() -> viewModel.updateProduct()}"
            android:text="@string/edit_product_done_btn_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilQuantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>